# motor

./: .gitmodules  CMakeLists.txt  README.md
src/: main.c  motor_control.c  motor_control.h
src/algorithm/: CMakeLists.txt  control_interface.h  sensorless_trapezoidal.c
src/board/: CMakeLists.txt
src/board/STM32F4/board1/: CMakeLists.txt
src/encoder/: CMakeLists.txt  biss_encoder.c  biss_encoder.h  encoder.c  encoder.h  resolver_encoder.c  resolver_encoder.h
src/mcu/: CMakeLists.txt  mcu.h  mcu_rza.c  mcu_stm32f4.c  mcudefs.h  mcus.h
src/pwm/: pwm.c  pwm.h
src/timer/: timer.h
